did more data clean up, added simple logistic regression first-pass

--- a/Rmarkdown/Project2.Rmd
+++ b/Rmarkdown/Project2.Rmd
@@ -290,30 +290,22 @@ Based on the correlation plot above, we see high correlation between 'euribor3m'
 df <- df %>% select(-emp_var_rate)
 ```
 
-#Check for correlation with categorical variables
 
-We cannot keep both age group and age. Should we remove age?
+# Run random forest on down-sampled data set to check for variable importance 
 
-We also need to either remove duration or duration group. 
+I am running RF on a subset of the data to do a gross check for important variables and to determine if the new variables duration group and age group are deemed more important than the continuous variables of just raw duration and raw age.
 
-```{r}
-#run two models to see which variable is better?
-
-
-```
-
-## Feature Selection
-
-# Run random forest on down-sampled data set to check for variable importance
 ```{r}
 #move response variable to end of data set
 df <- df %>% relocate(y, .after = last_col())
 
+#randomly sample 10k obs
+sample10k <- sample_n(df, 10000)
 
 #down sample to balance response
 set.seed(1)
-downsample <- downSample(x = df[, -22],
-                         y = df$y)
+downsample <- downSample(x = sample10k[, -21],
+                         y = sample10k$y)
 table(downsample$Class)
 
 
@@ -321,10 +313,54 @@ RFcontrol <- rfeControl(functions=rfFuncs, method="cv", number=5, verbose = FALS
 
 set.seed(123)
 subsets <- c(1:5, 10, 15, 20)
-RFresults <- rfe(downsample[,1:21], downsample[[22]], sizes=subsets, rfeControl=RFcontrol)
+RFresults <- rfe(downsample[,1:20], downsample[[21]], sizes=subsets, rfeControl=RFcontrol)
 RFresults
 varImp(RFresults)
 ```
+Based on this, remove 'duration_group' and 'age_group' as the continuous version of those variables had higher importance on the final model.
+
+```{r}
+df <- df %>% select(-duration_group, -Age_Grp)
+
+```
+
+# Run Initial Logistic Regression
+
+```{r}
+# Train/Test Split
+set.seed(1234)
+num_rows <- nrow(df)
+train_idx <- sample(1:num_rows, 0.8 * num_rows)
+test_idx <- setdiff(1:num_rows, train_idx)
+train <- df[train_idx, ]
+test <- df[test_idx, ]
+
+#set train control parameters
+trControl <- trainControl(method = "cv", number = 10, classProbs = TRUE)
+
+model1 <- train(y ~., data = train, method = "glm", family = "binomial", trControl = trControl)
+model1
+summary(model1)
+
+confusionMatrix(model1)
+```
+```{r}
+#make predictions and create confusion matrix
+pred_model1 <- predict(model1, newdata = test)
+
+confusionMatrix(pred_model1,test$y)
+```
+
+# ROC Curve
+
+```{r}
+
+```
+
+
+## Random Forest
+
+ ---- Rinku will need to update based on the changes I made above ---
 
 # Train/Test Split
 ```{r}
@@ -340,20 +376,20 @@ test <- df[test_idx, ]
 
 # Random Forest
 ```{r}
-fitRF <- train(y ~ duration + duration_group + euribor3m + nr_employed + month, 
-               data = train, 
-               method = "rf", 
-               trControl = trainControl(method="cv", number = 5),
-               preProcess = c("center","scale"))  
-fitRF
+#fitRF <- train(y ~ duration + duration_group + euribor3m + nr_employed + month, 
+#               data = train, 
+#               method = "rf", 
+#               trControl = trainControl(method="cv", number = 5),
+#               preProcess = c("center","scale"))  
+#fitRF
 ```
 
 I ran a simple Random Forest on the top 6 variables from Megan's recursive feature elimination above. I got an accuracy over 90% on the training data. Let's see how we do on the test data. 
 
 
 ```{r}
-predRF <- predict(fitRF, newdata = test)
-confusionMatrix(predRF, test$y)
+#predRF <- predict(fitRF, newdata = test)
+#confusionMatrix(predRF, test$y)
 ```
 
 Over 91% accuracy on the test data! Also, sensitivity is over 96% while specificity is not that great at 53.79%
