--- a/Rmarkdown/Project2.Rmd
+++ b/Rmarkdown/Project2.Rmd
@@ -1247,8 +1247,88 @@ Overall
 
 # Random Forest 
 
+## Load the data
 
-# MOVED TO: rinku_random_forest.Rmd
+```{r}
+#train <- read.csv("../data/train.csv", stringsAsFactors = TRUE)
+#test <- read.csv("../data/test.csv", stringsAsFactors = TRUE)
+```
+
+## Train a Random Forest, tuning mtry and splitrule
+
+```{r}
+set.seed(1234)
+cv_control <- trainControl(method="cv", 
+                     classProbs = TRUE,
+                     savePredictions = TRUE,
+                     summaryFunction = twoClassSummary,
+                     num = 5)
+
+rf_grid <- expand.grid(
+  mtry = 4:8,
+  splitrule = c("gini","extratrees", "hellinger"),
+  min.node.size = c(1)
+)
+
+fitRF <- train(y ~ ., 
+               data = train, 
+               method = "ranger", 
+               metric = "ROC",
+               trControl = cv_control,
+               num.threads = 6,
+               num.trees = 30,
+               tuneGrid=rf_grid)  
+fitRF
+```
+
+I chose to tune 2 hyper parameters for Random Forest
+1. mtry which represents the number of predictors considered when splitting a node in a tree
+2. splitrule which determines the rule used for the actual splitting based on the above predictors
+Note: I set min.node.size to 1 as appropriate for classification
+
+## Performance on Training Set
+
+```{r}
+plot(fitRF)
+confusionMatrix(fitRF)
+```
+Optimizing for ROC, the winning parameters are an mtry of 5 predictors considered at each split, and the Hellinger split rule.  It's interesting that Hellinger won. I found some papers suggesting Hellinger handles imbalanced data well; being insensitive to skew.*
+* CITATION: https://www3.nd.edu/~nchawla/papers/DMKD11.pdf
+* CITATION: https://medium.com/@evgeni.dubov/classifying-imbalanced-data-using-hellinger-distance-f6a4330d6f9a
+
+## Performance on Test Set
+
+```{r}
+fitRF.predictions.raw <- predict(fitRF, newdata = test, type="raw")
+fitRF.predictions.prob <- predict(fitRF, newdata = test, type="prob")
+confusionMatrix(fitRF.predictions.raw, test$y, positive="yes")
+```
+
+Using the default cutoff, our random forest gets a test accuracy of 0.9161, with Sensitivity 0.4953 and Specificity 0.9688.
+
+## ROC Curve and Optimal Cutoff
+
+```{r warning=F, message=F}
+library(pROC)
+prediction.probabilities <- fitRF.predictions.prob$yes
+predicted.classes <- fitRF.predictions.raw
+observed.classes <- test$y
+
+# Compute roc
+res.roc <- roc(observed.classes, prediction.probabilities)
+plot.roc(res.roc, print.auc = TRUE, print.thres = "best")
+```
+
+```{r}
+# Get the best cutoff for balancing Sensitivity and Specificity
+cutoff <- coords(res.roc, "best", ret="threshold", transpose = FALSE)$threshold
+
+# Predict using the best cutoff and confirm with a Confusion Matrix
+predicted.classes.balanced <- factor(
+  ifelse( fitRF.predictions.prob$yes > cutoff, "yes", "no"), levels=c("no","yes"))
+confusionMatrix(predicted.classes.balanced, test$y, positive="yes")
+```
+
 
 
 # Model Comparison 
